--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5.2.2"
